fix(Tx): sorting ui now works + hides on smaller screen sizes

--- a/assets/css/components/_filter-bar.scss
+++ b/assets/css/components/_filter-bar.scss
@@ -42,6 +42,12 @@
   }
 }
 
+@media (max-width: 1085px) {
+  .sort-by {
+    display: none;
+  }
+}
+
 .filter-search {
   position: relative;
   input {
